# autonx

./: .gitignore  autonx.py  env.yaml  pyproject.toml  readme.md
test/lm3s6965evb/: config.yaml  test_qemu.py
test/sim/: config.yaml  test_ltp.py
