[tool.poetry]
name = "autonx"
version = "0.1.0"
description = "Automated Apache NuttX Testing"
authors = ["Brennan Ashton <bashton@brennanashton.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.7"
labgrid = { git = "https://github.com/labgrid-project/labgrid.git", tag = "v0.3.2" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
